k8s/domains/entitlements/components/api/infra/overlays/ephemeral/entitlements-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: entitlements-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: entitlements-api
