k8s/domains/entitlements/components/api/infra/overlays/ephemeral/entitlements-api-public-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: entitlements-api-public
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`api.tma.com`) && (PathPrefix(`/v1/entitlements/docs`) || PathRegexp(`^/v1/accounts/[^/]+/grants(/.*)?$`))
      services:
        - name: entitlements-api
          port: 3000
  tls: {}
